[gd_scene load_steps=6 format=3 uid="uid://msc235ipqnir"]

[ext_resource type="Script" uid="uid://dwlilal5ldgyp" path="res://src/ui/ingame/dynamic/weapon_crosshair/weapon_crosshair.gd" id="1_6fmj3"]

[sub_resource type="Gradient" id="Gradient_6lfwn"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.026, 0.076, 0.126)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_byp7r"]
gradient = SubResource("Gradient_6lfwn")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_4b3vs"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.0378788, 0.0883838)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2bmoq"]
gradient = SubResource("Gradient_4b3vs")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="WeaponCrosshair" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_6fmj3")
accuracy_high_offset = 0.026
accuracy_low_offset = 0.318
ammo_colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1)
blink_time = 0.15
metadata/_edit_lock_ = true

[node name="AccuracyIndicator" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_byp7r")

[node name="AmmoIndicator" type="TextureRect" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_2bmoq")

[node name="BlinkerTimer" type="Timer" parent="."]
wait_time = 0.15
